...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final authState = ref.watch(authNotifierProvider);
    final user = authState.user;

    return Scaffold(
      appBar: AppBar(title: const Text('Profil Pengguna')),
      body: KawungBackground(
        opacity: 0.03,
        child: SingleChildScrollView(
          padding: AppSpacing.pPage,
          child: _buildBody(context, ref, authState.status, user),
        ),
...
