...
                    route: RouteConstants.adminDokumentasi,
                    currentRoute: location,
                  ),
                if (!isAdmin && showDokumentasiKegiatan)
                  _buildMenuItem(
                    context,
                    title: 'Kegiatan',
                    icon: Icons.folder_outlined,
                    selectedIcon: Icons.folder,
                    route: RouteConstants.dokumentasiKegiatan,
                    currentRoute: location,
                  ),
              ],
...
